--- a/configure.in
+++ b/configure.in
@@ -5697,18 +5697,8 @@ WINNT|Darwin|Android)
     ;;
 esac
 
-MOZ_ARG_ENABLE_STRING(gstreamer,
-[  --enable-gstreamer[=0.10]           Enable GStreamer support],
-[ MOZ_GSTREAMER=1
-  # API version, eg 0.10, 1.0 etc
-  if test -z "$enableval" -o "$enableval" = "yes"; then
-    GST_API_VERSION=0.10
-  elif test "$enableval" = "no"; then
-    MOZ_GSTREAMER=
-  else
-    GST_API_VERSION=$enableval
-  fi],
-)
+MOZ_GSTREAMER=1
+GST_API_VERSION=1.0
 
 if test -n "$MOZ_GSTREAMER"; then
     # core/base release number
